Fix 'xdebug' package name for Ubuntu with external_repo == true

--- a/php/ng/map.jinja
+++ b/php/ng/map.jinja
@@ -69,7 +69,7 @@
                             'tcpdf': 'php-tcpdf',
                             'temp_dir': '/tmp',
                             'tidy': 'php' + phpng_version + '-tidy',
-                            'xdebug': 'php' + phpng_version + '-xdebug',
+                            'xdebug': 'php-xdebug',
                             'xml': 'php' + phpng_version + '-xml',
                             'xsl': 'php' + phpng_version + '-xsl',
                             'zip': 'php' + phpng_version + '-zip',
